k8s-booksing.yaml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: traefik
  generation: 1
  name: booksing-ingress
spec:
  rules:
  - host: booksing.dev.erwin.land
    http:
      paths:
      - backend:
          serviceName: dev-booksing
          servicePort: 7132
...
---
apiVersion: v1
kind: Service
metadata:
  name: dev-booksing
spec:
  ports:
  - name: dev-booksing-http
    port: 7132
    protocol: TCP
    targetPort: web
  selector:
    app: dev-booksing
  sessionAffinity: None
  type: ClusterIP
...
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  labels:
    app: dev-booksing
  name: gnur-dev-booksing
spec:
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: dev-booksing
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: dev-booksing
    spec:
      containers:
      - env:
        - name: MONGO_HOST
          value: mongodb
        - name: BOOK_DIR
          value: /booksing
        - name: DATABASE_LOCATION
          value: /tmp/booksing.db
        image: r.erwin.land/gnur/booksing
        imagePullPolicy: Always
        name: dev-booksing
        ports:
        - containerPort: 7132
          name: web
          protocol: TCP
        readinessProbe:
          failureThreshold: 3
          httpGet:
            path: /
            port: 7132
            scheme: HTTP
          initialDelaySeconds: 2
          periodSeconds: 1
          successThreshold: 1
          timeoutSeconds: 1
        resources:
          limits:
            memory: 256Mi
          requests:
            memory: 128Mi
        volumeMounts:
        - mountPath: /booksing
          name: books
      dnsPolicy: ClusterFirst
      imagePullSecrets:
      - name: regcred
      restartPolicy: Always
      terminationGracePeriodSeconds: 10
      volumes:
      - hostPath:
          path: /var/lib/volumes/booksing
          type: Directory
        name: books
